--- a/src/main/resources/templates/BuchungPage/buchung.html
+++ b/src/main/resources/templates/BuchungPage/buchung.html
@@ -1,13 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Buchung {buchung.id}</title>
-</head>
-<body>
+{#include base.html}
+{#title}Buchung {buchung.id}{/title}
+{#body}
 Buchungsdatum: {buchung.datum}<br>
 Beschreibung: {buchung.beschreibung}<br>
 Betrag: {buchung.getBetragStr()}<br>
 Kategorie: {buchung.kategorie}
-</body>
-</html>
+{/body}
+{/include}
